# Game-Learning-1---Tivat-Survivors

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
EasyXLibs/: VSCustomNativeHeapEtwProvider.lib  VsGraphicsHelper.lib
Main/: CMakeLists.txt
Main/src/: main.cpp
PixelGame/: CMakeLists.txt
PixelGame/inc/: Animation.h  Atlas.h  Bullet.h  Button.h  Enemy.h  GameConsole.h  PixelGame.h  PixelGameProperty.h  Player.h
PixelGame/src/: Animation.cpp  Atlas.cpp  Bullet.cpp  Button.cpp  Enemy.cpp  GameConsole.cpp  PixelGame.cpp  Player.cpp
cmake/: PixelGameTryConfig.cmake.in  dependencies.cmake
